--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".network.NetworkHelper">
+            <intent-filter>
+                <action android:name="android.net." />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
