--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,6 @@ allprojects {
         
     }
 }
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-
 ext{
     // Networking
     retrofit_version = '2.6.0'
@@ -35,3 +30,19 @@ ext{
     //coroutines
     coroutines_version = '1.3.2'
 }
+
+task installGitHook(type: Copy) {
+    from new File(rootProject.rootDir, 'pre-commit')
+    into { new File(rootProject.rootDir, '.git/hooks') }
+    fileMode 0777
+}
+tasks.getByPath(':app:preBuild').dependsOn installGitHook
+
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
+
+
+
