--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,12 @@ ext{
     coroutines_version = '1.3.2'
 }
 
-task installGitHook(type: Copy) {
+/*task installGitHook(type: Copy) {
     from new File(rootProject.rootDir, 'pre-commit')
     into { new File(rootProject.rootDir, '.git/hooks') }
     fileMode 0777
 }
-tasks.getByPath(':app:preBuild').dependsOn installGitHook
+tasks.getByPath(':app:preBuild').dependsOn installGitHook*/
 
 
 task clean(type: Delete) {
